// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Items renders correctly isLoading 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root makeStyles-root-4 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5"
    >
      <div />
    </div>
    <div
      class="MuiGrid-root makeStyles-root-4 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3"
    >
      <div />
    </div>
    <div
      class="MuiGrid-root makeStyles-root-4 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
    >
      <div />
    </div>
    <div
      class="MuiGrid-root makeStyles-root-4 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3"
    >
      <div />
    </div>
    <div
      class="MuiGrid-root makeStyles-root-4 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
    >
      <div />
    </div>
    <div
      class="MuiGrid-root makeStyles-root-4 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3"
    >
      <div />
    </div>
    <div
      class="MuiGrid-root makeStyles-root-4 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
    >
      <div />
    </div>
    <div
      class="MuiGrid-root makeStyles-root-4 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3"
    >
      <div />
    </div>
    <div
      class="MuiGrid-root makeStyles-root-4 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Items renders correctly with items 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root makeStyles-root-1 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5"
    >
      <button
        class="MuiButtonBase-root"
        tabindex="0"
        type="button"
      >
        <a
          href="/view/123456"
        >
          <p>
            에버랜드
          </p>
          <div
            class="makeStyles-div-2"
          />
          <span
            style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
          >
            <img
              alt="에버랜드"
              class="makeStyles-image-3"
              data-nimg="fill"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; background-size: cover; background-position: 0% 0%; filter: blur(20px); background-image: url(https://firstimage2.jpg);"
            />
            <noscript />
          </span>
        </a>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="MuiGrid-root makeStyles-root-1 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3"
    >
      <button
        class="MuiButtonBase-root"
        tabindex="0"
        type="button"
      >
        <a
          href="/view/234567"
        >
          <p>
            롯데월드
          </p>
          <div
            class="makeStyles-div-2"
          />
          <span
            style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
          >
            <img
              alt="롯데월드"
              class="makeStyles-image-3"
              data-nimg="fill"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; background-size: cover; background-position: 0% 0%; filter: blur(20px); background-image: url(https://firstimage4.jpg);"
            />
            <noscript />
          </span>
        </a>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Items renders correctly without items 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root makeStyles-root-5 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5"
    >
      <div />
    </div>
    <div
      class="MuiGrid-root makeStyles-root-5 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3"
    >
      <div />
    </div>
    <div
      class="MuiGrid-root makeStyles-root-5 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
    >
      <div />
    </div>
    <div
      class="MuiGrid-root makeStyles-root-5 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3"
    >
      <div />
    </div>
    <div
      class="MuiGrid-root makeStyles-root-5 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
    >
      <div />
    </div>
    <div
      class="MuiGrid-root makeStyles-root-5 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3"
    >
      <div />
    </div>
    <div
      class="MuiGrid-root makeStyles-root-5 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
    >
      <div />
    </div>
    <div
      class="MuiGrid-root makeStyles-root-5 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3"
    >
      <div />
    </div>
    <div
      class="MuiGrid-root makeStyles-root-5 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5"
    >
      <div />
    </div>
  </div>
</div>
`;
